--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,21 +17,25 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera.autofocus" />
     <uses-feature android:name="android.hardware.camera" />
 
-    <uses-feature android:glEsVersion="0x00020000" android:required="true"/>
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".App"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".mvp.view.activity.SplashActivity"
+        <activity
+            android:name=".mvp.view.activity.SplashActivity"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -42,10 +46,14 @@
         <activity
             android:name=".mvp.view.activity.MainActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".mvp.view.activity.CameraActivity"
-            android:theme="@style/AppTheme.FullScreen"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".mvp.view.activity.IncPlayerActivity"/>
+        <activity
+            android:name=".mvp.view.activity.CameraActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.FullScreen" />
+        <activity android:name=".mvp.view.activity.IncPlayerActivity" />
+        <activity
+            android:name=".mvp.view.activity.PusherActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
